--- a/Solution/ActivityLauncher.Client/Pages/Activities/Atoms/AddTaskButton.razor
+++ b/Solution/ActivityLauncher.Client/Pages/Activities/Atoms/AddTaskButton.razor
@@ -1,12 +1,42 @@
 ﻿@inject IStringLocalizer<ActivityLocales> Localize
 
-<MudMenu Class="@Class" Label="@Localize["Activity.Dialog.Tasks.AddTask"]" Variant="Variant.Filled" Color="Color.Primary">
-    <MudMenuItem OnClick="AddExplorerFolderTask">@Localize["Task.ExplorerFolderTask.Title"]</MudMenuItem>
-    <MudMenuItem OnClick="AddProgramTask">@Localize["Task.ProgramTask.Title"]</MudMenuItem>
-    <MudMenuItem OnClick="AddScriptTask">@Localize["Task.ScriptTask.Title"]</MudMenuItem>
-    <MudMenuItem OnClick="AddTerminalTask">@Localize["Task.TerminalTask.Title"]</MudMenuItem>
-    <MudMenuItem OnClick="AddVSCodeTask">@Localize["Task.VSCodeTask.Title"]</MudMenuItem>
-    <MudMenuItem OnClick="AddOpenFileTask">@Localize["Task.OpenFileTask.Title"]</MudMenuItem>
+<MudMenu Label="@Localize["Activity.Dialog.Tasks.AddTask"]" Variant="Variant.Filled" Color="Color.Primary" AnchorOrigin="Origin.BottomLeft">
+    <MudMenuItem OnClick="() => AddTask(new ExplorerFolderTask())">
+        <MudStack Row AlignItems="AlignItems.Center">
+            <MudImage Src="/img/ExplorerFolderTaskIcon.png" Style="height: 30px; width: 30px;" />
+            <span>@Localize["Task.ExplorerFolderTask.Title"]</span>
+        </MudStack>
+    </MudMenuItem>
+    <MudMenuItem OnClick="() => AddTask(new ProgramTask())">
+        <MudStack Row AlignItems="AlignItems.Center">
+            <MudImage Src="/img/ProgramTaskIcon.png" Style="height: 30px; width: 30px;" />
+            <span>@Localize["Task.ProgramTask.Title"]</span>
+        </MudStack>
+    </MudMenuItem>
+    <MudMenuItem OnClick="() => AddTask(new ScriptTask())">
+        <MudStack Row AlignItems="AlignItems.Center">
+            <MudImage Src="/img/ScriptTaskIcon.png" Style="height: 30px; width: 30px;" />
+            <span>@Localize["Task.ScriptTask.Title"]</span>
+        </MudStack>
+    </MudMenuItem>
+    <MudMenuItem OnClick="() => AddTask(new TerminalTask())">
+        <MudStack Row AlignItems="AlignItems.Center">
+            <MudImage Src="/img/TerminalTaskIcon.png" Style="height: 30px; width: 30px;" />
+            <span>@Localize["Task.TerminalTask.Title"]</span>
+        </MudStack>
+    </MudMenuItem>
+    <MudMenuItem OnClick="() => AddTask(new VSCodeTask())">
+        <MudStack Row AlignItems="AlignItems.Center">
+            <MudImage Src="/img/VSCodeTaskIcon.png" Style="height: 30px; width: 30px;" />
+            <span>@Localize["Task.VSCodeTask.Title"]</span>
+        </MudStack>
+    </MudMenuItem>
+    <MudMenuItem OnClick="() => AddTask(new OpenFileTask())">
+        <MudStack Row AlignItems="AlignItems.Center">
+            <MudImage Src="/img/OpenFileTaskIcon.png" Style="height: 30px; width: 30px;" />
+            <span>@Localize["Task.OpenFileTask.Title"]</span>
+        </MudStack>
+    </MudMenuItem>
 </MudMenu>
 
 @code {
@@ -14,44 +44,12 @@
     public Activity Activity { get; set; } = null!;
 
     [Parameter]
-    public EventCallback<Activity> ActivityChanged { get; set; }
+    public EventCallback OnChange { get; set; }
 
-    [Parameter]
-    public string Class { get; set; } = string.Empty;
-
-    private async Task AddExplorerFolderTask()
+    private async Task AddTask(ITask task)
     {
-        Activity.AddTask(new ExplorerFolderTask() { Name = string.Format(Localize["Task.NewName"], Activity.ExplorerFolderTasks.Count() + 1) });
-        await ActivityChanged.InvokeAsync(Activity);
-    }
-
-    private async Task AddProgramTask()
-    {
-        Activity.AddTask(new ProgramTask() { Name = string.Format(Localize["Task.NewName"], Activity.ProgramTasks.Count() + 1) });
-        await ActivityChanged.InvokeAsync(Activity);
-    }
-
-    private async Task AddScriptTask()
-    {
-        Activity.AddTask(new ScriptTask() { Name = string.Format(Localize["Task.NewName"], Activity.ScriptTasks.Count() + 1) });
-        await ActivityChanged.InvokeAsync(Activity);
-    }
-
-    private async Task AddTerminalTask()
-    {
-        Activity.AddTask(new TerminalTask() { Name = string.Format(Localize["Task.NewName"], Activity.TerminalTasks.Count() + 1) });
-        await ActivityChanged.InvokeAsync(Activity);
-    }
-
-    private async Task AddVSCodeTask()
-    {
-        Activity.AddTask(new VSCodeTask() { Name = string.Format(Localize["Task.NewName"], Activity.VSCodeTasks.Count() + 1) });
-        await ActivityChanged.InvokeAsync(Activity);
-    }
-
-    private async Task AddOpenFileTask()
-    {
-        Activity.AddTask(new OpenFileTask() { Name = string.Format(Localize["Task.NewName"], Activity.OpenFileTasks.Count() + 1) });
-        await ActivityChanged.InvokeAsync(Activity);
+        task.Name = string.Format(Localize["Task.NewName"], Activity.GetTasks().Count() + 1);
+        Activity.AddTask(task);
+        await OnChange.InvokeAsync();
     }
 }
