--- a/Solution/ActivityLauncher.Client/Pages/Activities/Organisms/TasksDialogSection.razor
+++ b/Solution/ActivityLauncher.Client/Pages/Activities/Organisms/TasksDialogSection.razor
@@ -3,47 +3,29 @@
 
 @inject IStringLocalizer<ActivityLocales> Localize
 
-<MudStack Row Justify="Justify.SpaceBetween">
-    <MudText Typo="Typo.h5" Class="my-6">@Localize["Activity.Dialog.Tasks.Title"]</MudText>
-    @if (EditMode)
-    {
-        <AddTaskButton Class="mt-4" @bind-Activity="Activity" />
-    }
-</MudStack>
-
-@if (Activity.GetTasks().Any())
-{
-    <MudStack Spacing="6" Class="mb-16">
-        @if (Activity.ExplorerFolderTasks.Any())
+<div class="@Class">
+    <MudStack Class="mb-6" Row Justify="Justify.SpaceBetween">
+        <MudText Typo="Typo.h5">@Localize["Activity.Dialog.Tasks.Title"]</MudText>
+        @if (EditMode)
         {
-            <TaskListSection @bind-Activity="Activity" Title="@Localize["Task.ExplorerFolderTask.Title"]" Description="@Localize["Task.ExplorerFolderTask.Description"]" Tasks="Activity.ExplorerFolderTasks" EditMode="EditMode" />
-        }
-        @if (Activity.ProgramTasks.Any())
-        {
-            <TaskListSection @bind-Activity="Activity" Title="@Localize["Task.ProgramTask.Title"]" Description="@Localize["Task.ProgramTask.Description"]" Tasks="Activity.ProgramTasks" EditMode="EditMode" />
-        }
-        @if (Activity.ScriptTasks.Any())
-        {
-            <TaskListSection @bind-Activity="Activity" Title="@Localize["Task.ScriptTask.Title"]" Description="@Localize["Task.ScriptTask.Description"]" Tasks="Activity.ScriptTasks" EditMode="EditMode" />
-        }
-        @if (Activity.TerminalTasks.Any())
-        {
-            <TaskListSection @bind-Activity="Activity" Title="@Localize["Task.TerminalTask.Title"]" Description="@Localize["Task.TerminalTask.Description"]" Tasks="Activity.TerminalTasks" EditMode="EditMode" />
-        }
-        @if (Activity.VSCodeTasks.Any())
-        {
-            <TaskListSection @bind-Activity="Activity" Title="@Localize["Task.VSCodeTask.Title"]" Description="@Localize["Task.VSCodeTask.Description"]" Tasks="Activity.VSCodeTasks" EditMode="EditMode" />
-        }
-        @if (Activity.OpenFileTasks.Any())
-        {
-            <TaskListSection @bind-Activity="Activity" Title="@Localize["Task.OpenFileTask.Title"]" Description="@Localize["Task.OpenFileTask.Description"]" Tasks="Activity.OpenFileTasks" EditMode="EditMode" />
+            <AddTaskButton Activity="Activity" OnChange="TasksChanged" />
         }
     </MudStack>
-}
-else
-{
-    <MudText Typo="Typo.body1">@Localize["Activity.Dialog.Tasks.Empty"]</MudText>
-}
+
+    @if(_tasks.Any())
+    {
+        <MudStack Spacing="4">
+            @foreach(var task in _tasks)
+            {
+                <TaskCard Task="task" EditMode="EditMode" OnRemove="GetOnRemoveCallback(task)" />
+            }
+        </MudStack>
+    }
+    else
+    {
+        <MudText Typo="Typo.body1">@Localize["Activity.Dialog.Tasks.Empty"]</MudText>
+    }
+</div>
 
 @code {
     [Parameter]
@@ -51,4 +33,28 @@ else
 
     [Parameter]
     public bool EditMode { get; set; } = false;
+
+    [Parameter]
+    public string Class { get; set; } = string.Empty;
+
+    private IEnumerable<ITask> _tasks = null!;
+
+    protected override void OnInitialized()
+    {
+        TasksChanged();
+    }
+
+    private void TasksChanged()
+    {
+        _tasks = Activity.GetTasks();        
+    }
+
+    private EventCallback GetOnRemoveCallback(ITask task)
+    {
+        return EventCallback.Factory.Create(this, () =>
+        {
+            Activity.RemoveTask(task);
+            TasksChanged();
+        });
+    }
 }
