--- a/Solution/ActivityLauncher.Client/Pages/Activities/Organisms/ActivityDialogEdit.razor
+++ b/Solution/ActivityLauncher.Client/Pages/Activities/Organisms/ActivityDialogEdit.razor
@@ -7,8 +7,8 @@
             <MudContainer Class="mb-16">
                 <MudForm @ref="_form" @bind-IsValid="_success">
                     <MudStack Spacing="4">
-                        <MudTextField T="string" @bind-Value="_activity.Name" Label="@Localize["Activity.Dialog.Name.Label"]" Required RequiredError="@Localize["Activity.Dialog.Name.RequiredError"]" />
-                        <MudTextField T="string" @bind-Value="_activity.Description" Label="@Localize["Activity.Dialog.Description.Label"]" Lines="2" />
+                        <MudTextField T="string" Style="width: 50%;" @bind-Value="_activity.Name" Label="@Localize["Activity.Dialog.Name.Label"]" Required RequiredError="@Localize["Activity.Dialog.Name.RequiredError"]" Variant="Variant.Outlined" />
+                        <MudTextField T="string" @bind-Value="_activity.Description" Label="@Localize["Activity.Dialog.Description.Label"]" Lines="2" Variant="Variant.Outlined" />
                     </MudStack>
                     <TasksDialogSection Class="mt-12" Activity="_activity" EditMode />
                     <MudStack Class="mt-12" Row Justify="Justify.FlexEnd">
