--- a/Solution/ActivityLauncher.Client/Pages/Activities/Organisms/ActivityDialogEdit.razor
+++ b/Solution/ActivityLauncher.Client/Pages/Activities/Organisms/ActivityDialogEdit.razor
@@ -5,7 +5,7 @@
     <DialogContent>
         <div style="max-height: calc(100vh - 64px); overflow-y: scroll">
             <MudContainer Class="mb-16">
-                <MudForm @ref="_form" @bind-IsValid="_success">
+                <MudForm @ref="_form">
                     <MudStack Spacing="4">
                         <MudTextField T="string" Style="width: 50%;" @bind-Value="_activity.Name" Label="@Localize["Activity.Dialog.Name.Label"]" Required RequiredError="@Localize["Activity.Dialog.Name.RequiredError"]" Variant="Variant.Outlined" />
                         <MudTextField T="string" @bind-Value="_activity.Description" Label="@Localize["Activity.Dialog.Description.Label"]" Lines="2" Variant="Variant.Outlined" />
@@ -13,7 +13,7 @@
                     <TasksDialogSection Class="mt-12" Activity="_activity" EditMode />
                     <MudStack Class="mt-12" Row Justify="Justify.FlexEnd">
                         <MudButton Variant="Variant.Filled" OnClick="MudDialog.Cancel">@Localize["Activity.Dialog.CancelButton"]</MudButton>
-                        <MudButton Variant="Variant.Filled" Color="Color.Primary" Disabled="@(!_success)" OnClick="Submit">@SubmitButtonLabel</MudButton>
+                        <MudButton Variant="Variant.Filled" Color="Color.Primary" OnClick="Submit">@SubmitButtonLabel</MudButton>
                     </MudStack>
                 </MudForm>
             </MudContainer>
@@ -33,7 +33,6 @@
     private string SubmitButtonLabel => IsEdit ? Localize["Activity.Dialog.Edit.SubmitButton"] : Localize["Activity.Dialog.Create.SubmitButton"];
 
     private MudForm _form = null!;
-    private bool _success;
 
     private Activity _activity = new();
 
@@ -47,12 +46,17 @@
 
     private async Task Submit()
     {
-        if (string.IsNullOrWhiteSpace(_activity.Name)) return;
+        await _form.Validate();
 
-        _activity.Description = string.IsNullOrWhiteSpace(_activity.Description) ? null : _activity.Description;
+        if (_form.IsValid)
+        {
+            if (string.IsNullOrWhiteSpace(_activity.Name)) return;
 
-        if (IsEdit) await Edit();
-        else await Create();
+            _activity.Description = string.IsNullOrWhiteSpace(_activity.Description) ? null : _activity.Description;
+
+            if (IsEdit) await Edit();
+            else await Create();
+        }
     }
 
     private async Task Create()
