--- a/Solution/ActivityLauncher.Client/Pages/Activities/Molecules/Tasks/ExplorerFolderTaskCard.razor
+++ b/Solution/ActivityLauncher.Client/Pages/Activities/Molecules/Tasks/ExplorerFolderTaskCard.razor
@@ -3,7 +3,28 @@
 
 <GenericTaskCard Task="Task" EditMode="EditMode" OnRemove="OnRemove" HelperTooltip="@Localize["Activity.Dialog.Task.ExplorerFolderTask.HelperTooltip"]" TaskIconSource="/img/ExplorerFolderTaskIcon.png">
     <TaskDetailTemplate>
-
+        @if (EditMode)
+        {
+            <div class="mt-4">
+                <FolderPickerInput Label="@Localize["Activity.Dialog.Task.ExplorerFolderTask.DirectoryPath.Label"]" @bind-FolderPath="Task.DirectoryPath" />
+            </div>
+        }
+        else
+        {
+            <MudStack Row AlignItems="AlignItems.Center">
+                <MudTooltip Text="@Localize["Activity.Dialog.Task.ExplorerFolderTask.DirectoryPath.Label"]">
+                    <MudIcon Icon="@Icons.Material.Filled.Folder" />
+                </MudTooltip>
+                @if (!string.IsNullOrWhiteSpace(Task.DirectoryPath))
+                {
+                    <code style="font-size: 1rem;">@Task.DirectoryPath</code>
+                }
+                else
+                {
+                    <MudText Typo="Typo.body1">@Localize["Activity.Dialog.Task.ExplorerFolderTask.DirectoryPath.Empty"]</MudText>
+                }
+            </MudStack>
+        }
     </TaskDetailTemplate>
 </GenericTaskCard>
 
