--- a/Solution/ActivityLauncher.Client/Pages/Activities/Molecules/Tasks/ScriptTaskCard.razor
+++ b/Solution/ActivityLauncher.Client/Pages/Activities/Molecules/Tasks/ScriptTaskCard.razor
@@ -3,7 +3,25 @@
 
 <GenericTaskCard Task="Task" EditMode="EditMode" OnRemove="OnRemove" HelperTooltip="@Localize["Activity.Dialog.Task.ScriptTask.HelperTooltip"]" TaskIconSource="/img/ScriptTaskIcon.png">
     <TaskDetailTemplate>
+        @if (EditMode)
+        {
+            <div class="mt-4">
+                <MudTextField T="string" Label="@Localize["Activity.Dialog.Task.ScriptTask.Script.Label"]" Variant="Variant.Filled" @bind-Text="Task.Script" Lines="5" />
+            </div>
+        }
+        else
+        {
+            <MudText Typo="Typo.body1" Class="mb-2" Style="font-weight: bold;">@Localize["Activity.Dialog.Task.ScriptTask.Script.Label"]</MudText>
+            @if (!string.IsNullOrWhiteSpace(Task.Script))
+            {
+                <PowerShellScriptDisplay Script="@Task.Script" Highlight StartChevron />
+            }
+            else
+            {
+                <MudText Typo="Typo.body1">@Localize["Activity.Dialog.Task.ScriptTask.Script.Empty"]</MudText>
 
+            }
+        }
     </TaskDetailTemplate>
 </GenericTaskCard>
 
