--- a/Solution/ActivityLauncher.Client/Pages/Activities/Molecules/Tasks/ScriptTaskCard.razor
+++ b/Solution/ActivityLauncher.Client/Pages/Activities/Molecules/Tasks/ScriptTaskCard.razor
@@ -1,11 +1,11 @@
 ﻿@inject ActivityController ActivityController
 @inject IStringLocalizer<ActivityLocales> Localize
 
-<GenericTaskCard Task="Task" EditMode="EditMode" OnRemove="OnRemove" HelperTooltip="@Localize["Activity.Dialog.Task.ScriptTask.HelperTooltip"]" TaskIconSource="/img/ScriptTaskIcon.png">
+<GenericTaskCard Task="Task" EditMode="EditMode" OnRemove="OnRemove" OnNameChange="OnNameChange" TaskType="Task.TaskType">
     <TaskDetailTemplate>
         @if (EditMode)
         {
-            <div class="mt-4">
+            <div class="mt-6">
                 <MudTextField T="string" Label="@Localize["Activity.Dialog.Task.ScriptTask.Script.Label"]" Variant="Variant.Filled" @bind-Text="Task.Script" Lines="5" />
             </div>
         }
@@ -31,6 +31,9 @@
 
     [Parameter]
     public bool EditMode { get; set; } = false;
+
+    [Parameter]
+    public EventCallback OnNameChange { get; set; }
 
     [Parameter]
     public EventCallback OnRemove { get; set; }
