--- a/Solution/ActivityLauncher.Client/Pages/Activities/Molecules/Tasks/OpenFileTaskCard.razor
+++ b/Solution/ActivityLauncher.Client/Pages/Activities/Molecules/Tasks/OpenFileTaskCard.razor
@@ -1,9 +1,30 @@
 ﻿@inject ActivityController ActivityController
 @inject IStringLocalizer<ActivityLocales> Localize
 
-<GenericTaskCard Task="Task" EditMode="EditMode" OnRemove="OnRemove" HelperTooltip="@Localize["Activity.Dialog.Task.OpenFileTask.HelperTooltip"]" TaskIconSource="/img/OpenFileTaskIcon.png">
+<GenericTaskCard Task="Task" EditMode="EditMode" OnRemove="OnRemove" OnNameChange="OnNameChange" TaskType="Task.TaskType">
     <TaskDetailTemplate>
-
+        @if (EditMode)
+        {
+            <div class="mt-6">
+                <FilePickerInput Label="@Localize["Activity.Dialog.Task.OpenFileTask.FilePath.Label"]" @bind-FilePath="Task.FilePath" />
+            </div>
+        }
+        else
+        {
+            <MudStack Row AlignItems="AlignItems.Center">
+                <MudTooltip Text="@Localize["Activity.Dialog.Task.OpenFileTask.FilePath.Label"]">
+                    <MudIcon Icon="@Icons.Material.Filled.FileOpen" />
+                </MudTooltip>
+                @if (!string.IsNullOrWhiteSpace(Task.FilePath))
+                {
+                    <code style="font-size: 1rem;">@Task.FilePath</code>
+                }
+                else
+                {
+                    <MudText Typo="Typo.body1">@Localize["Activity.Dialog.Task.OpenFileTask.FilePath.Empty"]</MudText>
+                }
+            </MudStack>
+        }
     </TaskDetailTemplate>
 </GenericTaskCard>
 
@@ -13,6 +34,9 @@
 
     [Parameter]
     public bool EditMode { get; set; } = false;
+
+    [Parameter]
+    public EventCallback OnNameChange { get; set; }
 
     [Parameter]
     public EventCallback OnRemove { get; set; }
