--- a/Solution/ActivityLauncher.Client/Pages/Activities/Organisms/ActivityDialogEdit.razor
+++ b/Solution/ActivityLauncher.Client/Pages/Activities/Organisms/ActivityDialogEdit.razor
@@ -10,8 +10,9 @@
                         <MudTextField T="string" Style="width: 50%;" @bind-Value="_activity.Name" Label="@Localize["Activity.Dialog.Name.Label"]" Required RequiredError="@Localize["Activity.Dialog.Name.RequiredError"]" Variant="Variant.Filled" />
                         <MudTextField T="string" @bind-Value="_activity.Description" Label="@Localize["Activity.Dialog.Description.Label"]" Lines="2" Variant="Variant.Filled" />
                     </MudStack>
-                    <TasksDialogSection Class="mt-12" Activity="_activity" EditMode />
-                    <MudStack Class="mt-12" Row Justify="Justify.FlexEnd">
+                    <TasksDialogSection Class="my-12" Activity="_activity" EditMode />
+                    <ErrorText Class="mb-6" Error="@FormError" />
+                    <MudStack Row Justify="Justify.FlexEnd">
                         <MudButton Variant="Variant.Filled" OnClick="MudDialog.Cancel">@Localize["Activity.Dialog.CancelButton"]</MudButton>
                         <MudButton Variant="Variant.Filled" Color="Color.Primary" OnClick="Submit">@SubmitButtonLabel</MudButton>
                     </MudStack>
@@ -35,6 +36,8 @@
     private MudForm _form = null!;
 
     private Activity _activity = new();
+
+    private string? FormError => _form.IsValid ? null : Localize["Activity.Dialog.Edit.FormError"].Value;
 
     protected override void OnInitialized()
     {
